--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,66 @@
     padding: 60px 50px;
 }
 
-.logo {
-    font-size: 200px;
+.small {
+  color: #cdd422;
+  font-size: 50px;
 }
+
 @media screen and (max-width: 768px) {
     .col-sm-6 {
         text-align: center;
         margin: 25px 0;
     }
+}
+
+.thumbnail {
+    padding: 15px;
+    border: none;
+    border-radius: 0;
+}
+
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
+
+.box {
+  background-color: white;
+}
+
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #f4511e;
+}
+
+.carousel-indicators li {
+    border-color: #f4511e;
+}
+
+.carousel-indicators li.active {
+    background-color: #f4511e;
+}
+
+.item {
+  margin-bottom: 6em;
+}
+
+.item h3 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    /*margin: 70px 0;*/
+}
+
+.item p {
+  max-width: 80%;
+  margin: auto;
+}
+
+.item span {
+    font-style: normal;
 }
 
 /* Here are the colors to use:
