--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,59 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+#myNavbar {
+    font-family: 'Hammersmith One', sans-serif;
+    margin-bottom: 0;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+}
+
+.navbar li a, .navbar .navbar-brand {
+    color: #431c5d !important;
+}
+
+.navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #e05915 !important;
+    background-color: #c2dde6 !important;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
+}
+
+
 .jumbotron {
+    font-family: 'Hammersmith One', sans-serif;
     background-color: #431c5d;
     color: #ffffff;
     padding: 100px 25px;
+}
+
+#subscribe-message {
+  margin-top: 1.5em;
+  font-style: italic;
 }
 
 .bg-grey {
@@ -40,17 +92,21 @@
   background-color: white;
 }
 
+#myCarousel {
+  background-color: #c2dde6;
+}
+
 .carousel-control.right, .carousel-control.left {
     background-image: none;
-    color: #f4511e;
+    color: #e05915;
 }
 
 .carousel-indicators li {
-    border-color: #f4511e;
+    border-color: #cdd422;
 }
 
 .carousel-indicators li.active {
-    background-color: #f4511e;
+    background-color: #cdd422;
 }
 
 .item {
@@ -72,6 +128,12 @@
 
 .item span {
     font-style: normal;
+}
+
+footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #e05915;
 }
 
 /* Here are the colors to use:
